# routes/index.js
@@ -3,7 +3,7 @@ const router = require('express').Router();
 router.get('/', (req, res) => {
    // #swagger.ignore = true
    res.send(req.session.user !== undefined
-       ? `Logged in as ${req.session.user.name} (${req.session.user.username})`
+       ? `Logged in as ${req.session.user.displayName} (${req.session.user.username})`
        : 'Logged out');
 });
 
@@ -11,5 +11,6 @@ router.use('/api-docs', require('./api-docs'));
 router.use('/sites', require('./sites'));
 router.use('/categories', require('./categories'));
 router.use('/auth', require('./auth'));
+router.use('/users', require('./users'));
 
 module.exports = router;
